--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ Gemfile.lock
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
 
+# Log file
+annotations2triannon.log
+
