Initial working code to translate REVS annotation into open annotations

--- a/.env_example
+++ b/.env_example
@@ -8,3 +8,14 @@
 
 DEBUG: false
 
+export REVS_DB_HOST='localhost'
+export REVS_DB_PORT='3306'
+export REVS_DB_USER='revs'
+export REVS_DB_PASSWORD=''
+export REVS_DB_DATABASE='revs'
+
+# Configure the triannon service
+export TRIANNON_HOST='triannon.example.org'
+export TRIANNON_USER=''
+export TRIANNON_PASS=''
+
