--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
-sudo: false
 language: ruby
+
+script: "bundle exec rspec"
 
 notifications:
   email: false
 
 rvm:
+  - 1.9.3
+  - 2.0.0
+  - 2.1.5
   - 2.2.0
+
