Add script for revs annotation harvest

--- a/.env_example
+++ b/.env_example
@@ -6,8 +6,12 @@
 # Uncomment and set values as required.  See used settings in
 # lib/marc2linkeddata/configuration.rb
 
-DEBUG: false
+export DEBUG=false
 
+export LOG_FILE='log/annotations2triannon.log'
+
+export REVS_SRC_USER='libuser'
+export REVS_SRC_HOST='revs.example.org'
 export REVS_DB_HOST='localhost'
 export REVS_DB_PORT='3306'
 export REVS_DB_USER='revs'
