Refactor open annotation harvest; provide config options to limit harvesting

--- a/.env_example
+++ b/.env_example
@@ -8,8 +8,30 @@
 
 export DEBUG=false
 
-export LOG_FILE='log/annotations2triannon.log'
+# limit the depth of IIIF navigation; useful for development
+# or testing a new data source.
+export ANNO_LIMIT_MANIFESTS=0   # 0 is all of them
+export ANNO_LIMIT_ANNOLISTS=0   # 0 is all of them
+export ANNO_LIMIT_OPENANNOS=0   # 0 is all of them
 
+export ANNO_LOG_FILE='log/annotations2triannon.log'
+
+# RestClient/Rack-Cache configs, see
+# http://rtomayko.github.io/rack-cache/configuration
+# http://rtomayko.github.io/rack-cache/storage
+export RACK_CACHE_ENABLED=true
+export RACK_CACHE_VERBOSE=false
+export RACK_CACHE_METASTORE='memcached://localhost:11211/anno_meta'
+#export RACK_CACHE_METASTORE='file:/tmp/cache/anno_meta'
+export RACK_CACHE_ENTITYSTORE='file:/tmp/cache/anno_body'
+
+# Configure the triannon service
+export TRIANNON_HOST='triannon.example.org'
+export TRIANNON_USER=''
+export TRIANNON_PASS=''
+
+# Configure the revs database for annotations and users
+export REVS_ENABLED=false
 export REVS_SRC_USER='libuser'
 export REVS_SRC_HOST='revs.example.org'
 export REVS_DB_HOST='localhost'
@@ -18,8 +40,4 @@ export REVS_DB_USER='revs'
 export REVS_DB_PASSWORD=''
 export REVS_DB_DATABASE='revs'
 
-# Configure the triannon service
-export TRIANNON_HOST='triannon.example.org'
-export TRIANNON_USER=''
-export TRIANNON_PASS=''
 
