Refactor triannon_client - use new triannon-client gem

--- a/.env_example
+++ b/.env_example
@@ -26,6 +26,7 @@ export RACK_CACHE_METASTORE='memcached://localhost:11211/anno_meta'
 export RACK_CACHE_ENTITYSTORE='file:/tmp/cache/anno_body'
 
 # Configure the triannon service
+export TRIANNON_LOG_FILE='log/triannon_client.log'
 export TRIANNON_HOST='triannon.example.org'
 export TRIANNON_USER=''
 export TRIANNON_PASS=''
