Ignore sublime text files

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@
 .repl_history
 build/
 
+## Specific to SublimeText:
+*.sublime*
+
 ## Documentation cache and generated files:
 /.yardoc/
 /_yardoc/
