--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,9 @@ install: ./bin/setup.sh
 script: ./bin/test.sh
 
 notifications:
-  email: false
+  email: triannon-commits@lists.stanford.edu
 
 rvm:
-  - 1.9.3
   - 2.0.0
   - 2.1.5
   - 2.2.0
