Update to latest triannon-client gem

--- a/.env_example
+++ b/.env_example
@@ -30,6 +30,7 @@ export TRIANNON_LOG_FILE='log/triannon_client.log'
 export TRIANNON_HOST='triannon.example.org'
 export TRIANNON_USER=''
 export TRIANNON_PASS=''
+export TRIANNON_CONTAINER='/annotations/'
 
 # Configure the revs database for annotations and users
 export REVS_ENABLED=false
