Add persistence option for redis

--- a/.env_example
+++ b/.env_example
@@ -42,4 +42,10 @@ export REVS_DB_USER='revs'
 export REVS_DB_PASSWORD=''
 export REVS_DB_DATABASE='revs'
 
-
+# Redis Persistence - based on https://github.com/redis/redis-rb
+# export REDIS_ENABLED=true # enable redis persistence (default = false)
+export REDIS_ENABLED=false
+# Set the REDIS_URL for a custom redis configuration.
+# export REDIS_URL="redis://{user}:{password}@{host}:{port}/{db}"
+# Leave commented to use default: 'redis://127.0.0.1:6379/0'
+#export REDIS_URL=localhost
