Modify debug limits on annos to process, provide repeatable processing option

--- a/.env_example
+++ b/.env_example
@@ -10,6 +10,7 @@ export DEBUG=false
 
 # limit the depth of IIIF navigation; useful for development
 # or testing a new data source.
+export ANNO_LIMIT_RANDOM=true   # use 0..limit or random sampling?
 export ANNO_LIMIT_MANIFESTS=0   # 0 is all of them
 export ANNO_LIMIT_ANNOLISTS=0   # 0 is all of them
 export ANNO_LIMIT_OPENANNOS=0   # 0 is all of them
