Do not use memcache for default config

--- a/.env_example
+++ b/.env_example
@@ -22,9 +22,8 @@ export ANNO_LOG_FILE='log/annotations2triannon.log'
 # http://rtomayko.github.io/rack-cache/storage
 export RACK_CACHE_ENABLED=true
 export RACK_CACHE_VERBOSE=false
-export RACK_CACHE_METASTORE='memcached://localhost:11211/anno_meta'
-#export RACK_CACHE_METASTORE='file:/tmp/cache/anno_meta'
-export RACK_CACHE_ENTITYSTORE='file:/tmp/cache/anno_body'
+export RACK_CACHE_METASTORE='file:tmp/cache/anno_meta'
+export RACK_CACHE_ENTITYSTORE='file:tmp/cache/anno_body'
 
 # Configure the triannon service
 export TRIANNON_LOG_FILE='log/triannon_client.log'
